feat: adicionar suporte para colar números e expressões matemáticas na calculadora

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <div class="calculator-container">
-    <div class="calculator">
+<body>  <div class="calculator-container">
+    <div class="calculator" tabindex="0" id="calculator">
       <!-- Header da calculadora -->
       <div class="calculator-header">
         <h2>CALCULADORA FINANCEIRA</h2>
