refactor: remover suporte ao cálculo de PMT e ajustar lógica de validação e cálculos financeiros

--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
           <span class="value" id="fvValue">-</span>
         </div>
         <div class="status-item">
-          <span class="label">PMT:</span>
-          <span class="value" id="pmtValue">-</span>
-        </div>
-        <div class="status-item">
           <span class="label">i:</span>
           <span class="value" id="iValue">-</span>
         </div>
@@ -57,18 +53,18 @@
         <div class="keypad-row">
           <button class="btn financial-btn" data-function="pv">PV</button>
           <button class="btn financial-btn" data-function="fv">FV</button>
-          <button class="btn financial-btn" data-function="pmt">PMT</button>
           <button class="btn financial-btn" data-function="i">i</button>
           <button class="btn financial-btn" data-function="n">n</button>
+          <button class="btn operation-btn" data-function="cpt">CPT</button>
         </div>
 
         <!-- Segunda linha - Operações especiais -->
         <div class="keypad-row">
-          <button class="btn operation-btn" data-function="cpt">CPT</button>
           <button class="btn operation-btn" data-function="ac">AC</button>
           <button class="btn operation-btn" data-function="ce">CE</button>
           <button class="btn operation-btn" data-function="sinal">+/-</button>
           <button class="btn operation-btn" data-function="porcento">%</button>
+          <button class="btn operation-btn" data-function="limpa">←</button>
         </div>
 
         <!-- Terceira linha - Números -->
@@ -77,7 +73,7 @@
           <button class="btn number-btn" data-number="8">8</button>
           <button class="btn number-btn" data-number="9">9</button>
           <button class="btn operation-btn" data-function="divide">÷</button>
-          <button class="btn operation-btn" data-function="limpa">←</button>
+          <button class="btn operation-btn" data-function="raiz">√</button>
         </div>
 
         <!-- Quarta linha - Números -->
