feat: adicionar funcionalidade de conversão de taxas e atualizar modo de capitalização

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 
       <!-- Teclado da calculadora -->
       <div class="keypad">
+        <!-- Nova linha - Conversão de taxas -->
+        <div class="keypad-row conversion-row">
+          <button class="btn conversion-btn" data-function="taxa-dia">Taxa/Dia</button>
+          <button class="btn conversion-btn" data-function="taxa-mes">Taxa/Mês</button>
+          <button class="btn conversion-btn" data-function="taxa-ano">Taxa/Ano</button>
+          <button class="btn operation-btn" data-function="toggle-mode">Modo</button>
+        </div>
+
         <!-- Primeira linha - Funções financeiras -->
         <div class="keypad-row">
           <button class="btn financial-btn" data-function="pv">PV</button>
