feat: substituir botão de raiz por logaritmo e implementar lógica de cálculo

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <button class="btn number-btn" data-number="5">5</button>
           <button class="btn number-btn" data-number="6">6</button>
           <button class="btn operation-btn" data-function="multiplica">×</button>
-          <button class="btn operation-btn" data-function="raiz">√</button>
+          <button class="btn operation-btn" data-function="log">log</button>
         </div>
 
         <!-- Quinta linha - Números -->
