fix: corrigir formatação do corpo do HTML e ajustar espaçamentos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>  <div class="calculator-container">
+<body>
+  <div class="calculator-container">
     <div class="calculator" tabindex="0" id="calculator">
       <!-- Header da calculadora -->
       <div class="calculator-header">
@@ -25,8 +26,8 @@
             <option value="simples">Juros Simples</option>
           </select>
         </div>
-      </div> 
-      
+      </div>
+
       <!-- Display principal -->
       <div class="display-section">
         <div class="operation-display" id="operationDisplay"></div>
