Display de Operação arrumado e complementado (Desconto Racional e Comercial)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <select class="mode-selector" id="modeSelector">
             <option value="composto">Juros Compostos</option>
             <option value="simples">Juros Simples</option>
+            <option value="desconto-racional">Desconto Racional</option>
+            <option value="desconto-comercial">Desconto Comercial</option>
           </select>
         </div>
       </div>
