--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <button class="btn number-btn" data-number="4">4</button>
           <button class="btn number-btn" data-number="5">5</button>
           <button class="btn number-btn" data-number="6">6</button>
-          <button class="btn operation-btn" data-function="multiplica">×</button>
+          <button class="btn operation-btn" data-function="multiplica">x</button>
           <button class="btn operation-btn" data-function="log">log</button>
         </div>
 
