feat: adicionar campo de desconto e atualizar exibição na calculadora financeira

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <option value="year">Anos</option>
           </select>
         </div>
+        <div class="status-item desconto-field">
+          <span class="label">D:</span>
+          <span class="value" id="dValue">-</span>
+        </div>
       </div>
 
       <!-- Teclado da calculadora -->
