feat: atualizar a calculadora para suportar juros simples e compostos, ajustando a lógica de cálculo e a interface

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="mode-selector-container">
           <label for="modeSelector">Modo:</label>
           <select class="mode-selector" id="modeSelector">
+            <option value="simples" selected>Juros Simples</option>
             <option value="composto">Juros Compostos</option>
-            <option value="simples">Juros Simples</option>
             <option value="desconto-racional">Desconto Racional</option>
             <option value="desconto-comercial">Desconto Comercial</option>
           </select>
