style: atualizar estilos e estrutura do display da calculadora financeira

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
       <!-- Display principal -->
       <div class="display-section">
-        <div class="operation-display" id="operationDisplay"></div>
+        <div class="operation-display">
+          <div class="mode-display" id="modeDisplay">JUROS SIMPLES</div>
+          <div class="operation-details" id="operationDisplay"></div>
+        </div>
         <div class="main-display" id="mainDisplay">0</div>
         <div class="variable-display" id="variableDisplay">-</div>
       </div>
