style: simplificar a sintaxe de condicionais em funções de cálculo financeiro

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <span class="label">PV:</span>
           <div class="value-container">
             <span class="value" id="pvValue">-</span>
-            <button class="clear-value-btn" id="clearPV" style="display: none;" title="Remover valor PV">×</button>
+            <button class="clear-value-btn" id="clearPV" style="display: none;" title="Remover valor PV">x</button>
           </div>
           <select class="value-selector" id="pvSelector" style="display: none;">
             <option value="real">Real (R$)</option>
@@ -58,7 +58,7 @@
           <span class="label">FV:</span>
           <div class="value-container">
             <span class="value" id="fvValue">-</span>
-            <button class="clear-value-btn" id="clearFV" style="display: none;" title="Remover valor FV">×</button>
+            <button class="clear-value-btn" id="clearFV" style="display: none;" title="Remover valor FV">x</button>
           </div>
           <select class="value-selector" id="fvSelector" style="display: none;">
             <option value="real">Real (R$)</option>
@@ -70,7 +70,7 @@
           <span class="label">i:</span>
           <div class="value-container">
             <span class="value" id="iValue">-</span>
-            <button class="clear-value-btn" id="clearI" style="display: none;" title="Remover valor i">×</button>
+            <button class="clear-value-btn" id="clearI" style="display: none;" title="Remover valor i">x</button>
           </div>
           <select class="rate-selector" id="rateSelector" style="display: none;">
             <option value="day">Dia</option>
@@ -82,7 +82,7 @@
           <span class="label">n:</span>
           <div class="value-container">
             <span class="value" id="nValue">-</span>
-            <button class="clear-value-btn" id="clearN" style="display: none;" title="Remover valor n">×</button>
+            <button class="clear-value-btn" id="clearN" style="display: none;" title="Remover valor n">x</button>
           </div>
           <select class="period-selector" id="periodSelector" style="display: none;">
             <option value="day">Dias</option>
@@ -94,7 +94,7 @@
           <span class="label">J:</span>
           <div class="value-container">
             <span class="value" id="jValue">-</span>
-            <button class="clear-value-btn" id="clearJ" style="display: none;" title="Remover valor J">×</button>
+            <button class="clear-value-btn" id="clearJ" style="display: none;" title="Remover valor J">x</button>
           </div>
           <select class="value-selector" id="jSelector" style="display: none;">
             <option value="real">Real (R$)</option>
@@ -106,7 +106,7 @@
           <span class="label">D:</span>
           <div class="value-container">
             <span class="value" id="dValue">-</span>
-            <button class="clear-value-btn" id="clearD" style="display: none;" title="Remover valor D">×</button>
+            <button class="clear-value-btn" id="clearD" style="display: none;" title="Remover valor D">x</button>
           </div>
         </div>
       </div>
