--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
             <span class="value" id="dValue">-</span>
             <button class="clear-value-btn" id="clearD" style="display: none;" title="Remover valor D">x</button>
           </div>
+          <select class="value-selector" id="dSelector" style="display: none;">
+            <option value="real">Real (R$)</option>
+            <option value="dollar">Dólar (US$)</option>
+            <option value="euro">Euro (€)</option>
+          </select>
         </div>
       </div>
 
