--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora Financeira</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/taxa-calculator.css">
 </head>
 
 <body>
@@ -174,7 +175,76 @@
     </div>
   </div>
 
+  <!-- Seção de Cálculo de Taxa de Desconto Comercial -->
+  <div class="taxa-calculator-container">
+    <div class="taxa-calculator">
+      <div class="taxa-header">
+        <h3>CÁLCULO DE TAXA DE DESCONTO COMERCIAL</h3>
+        <p>Capitalização Simples - Taxa do Desconto Comercial (ic) e Taxa Efetiva (i)</p>
+      </div>
+
+      <div class="taxa-content">
+        <div class="taxa-input-section">
+          <h4>Entrada de Dados:</h4>
+          <div class="taxa-inputs">
+            <div class="taxa-input-group">
+              <label for="icInput">ic (Taxa Desconto Comercial):</label>
+              <input type="number" id="icInput" step="0.01" placeholder="Ex: 2.5%">
+              <span class="taxa-unit">%</span>
+            </div>
+            <div class="taxa-input-group">
+              <label for="nTaxaInput">n (Período):</label>
+              <input type="number" id="nTaxaInput" step="1" placeholder="Ex: 12">
+              <select id="nTaxaUnit" class="taxa-unit-select" title="Unidade de tempo para o período">
+                <option value="dias">Dias</option>
+                <option value="meses" selected>Meses</option>
+                <option value="anos">Anos</option>
+              </select>
+            </div>
+            <div class="taxa-input-group">
+              <label for="iTaxaInput">i (Taxa Efetiva):</label>
+              <input type="number" id="iTaxaInput" step="0.01" placeholder="Ex: 3.0%">
+              <span class="taxa-unit">%</span>
+            </div>
+          </div>
+          
+          <div class="taxa-buttons">
+            <button class="taxa-btn taxa-calculate" id="calculateTaxa">Calcular</button>
+            <button class="taxa-btn taxa-clear" id="clearTaxa">Limpar</button>
+          </div>
+        </div>
+
+        <div class="taxa-output-section">
+          <h4>Resultados:</h4>
+          <div class="taxa-results">
+            <div class="taxa-result-item">
+              <span class="taxa-result-label">ic (Taxa Desconto Comercial):</span>
+              <span class="taxa-result-value" id="icResult">-</span>
+            </div>
+            <div class="taxa-result-item">
+              <span class="taxa-result-label">n (Período):</span>
+              <span class="taxa-result-value" id="nTaxaResult">-</span>
+            </div>
+            <div class="taxa-result-item">
+              <span class="taxa-result-label">i (Taxa Efetiva):</span>
+              <span class="taxa-result-value" id="iTaxaResult">-</span>
+            </div>
+          </div>
+          
+          <div class="taxa-formula">
+            <h5>Fórmula Utilizada:</h5>
+            <div class="formula-display">
+              <p><strong>i = ic / (1 - ic × n)</strong></p>
+              <p><strong>ic = i / (1 + i × n)</strong></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script type="module" src="js/script.js"></script>
+  <script type="module" src="js/taxa-calculator.js"></script>
 </body>
 
 </html>
