fix: atualizar rótulo do campo 'i' para incluir a unidade percentual

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </select>
         </div>
         <div class="status-item">
-          <span class="label">i:</span>
+          <span class="label">i (%):</span>
           <div class="value-container">
             <span class="value" id="iValue">-</span>
             <button class="clear-value-btn" id="clearI" style="display: none;" title="Remover valor i">x</button>
