feat: adicionar seletores de período para taxas nominal e efetiva na calculadora

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
             <span class="value" id="ikValue">-</span>
             <button class="clear-value-btn" id="clearIk" style="display: none;" title="Remover valor iₖ">x</button>
           </div>
+          <select class="rate-selector" id="ikPeriodSelector" style="display: inline-block;">
+            <option value="day">Dia</option>
+            <option value="month" selected>Mês</option>
+            <option value="year">Ano</option>
+          </select>
         </div>
         <div class="status-item capitalizacao-field">
           <span class="label">i<sub>e</sub> (%):</span>
@@ -132,6 +137,11 @@
             <span class="value" id="ieValue">-</span>
             <button class="clear-value-btn" id="clearIe" style="display: none;" title="Remover valor iₑ">x</button>
           </div>
+          <select class="rate-selector" id="iePeriodSelector" style="display: inline-block;">
+            <option value="day">Dia</option>
+            <option value="month" selected>Mês</option>
+            <option value="year">Ano</option>
+          </select>
         </div>
         <div class="status-item capitalizacao-field">
           <span class="label">k:</span>
