feat: adicionar seletor de período para taxa original e gerenciar exibição em modo de taxas equivalentes

--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
             <span class="value" id="i1Value">-</span>
             <button class="clear-value-btn" id="clearI1" style="display: none;" title="Remover Taxa Original">x</button>
           </div>
+          <select class="rate-selector" id="i1PeriodSelector" style="display: inline-block;">
+            <option value="day">Dia</option>
+            <option value="month" selected>Mês</option>
+            <option value="year">Ano</option>
+            <option value="semester">Semestre</option>
+            <option value="quarter">Trimestre</option>
+          </select>
         </div>
         <div class="status-item equivalentes-field">
           <span class="label">n:</span>
