feat: adicionar seletor de período para taxa equivalente e lógica de manipulação na calculadora

--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
             <span class="value" id="i2Value">-</span>
             <button class="clear-value-btn" id="clearI2" style="display: none;" title="Resultado calculado">x</button>
           </div>
+          <select class="rate-selector" id="i2PeriodSelector" style="display: inline-block;">
+            <option value="day">Dia</option>
+            <option value="month" selected>Mês</option>
+            <option value="year">Ano</option>
+            <option value="semester">Semestre</option>
+            <option value="quarter">Trimestre</option>
+          </select>
         </div>
         <div class="status-item equivalentes-field" style="display: none;">
           <span class="label">-:</span>
