refactor: reorganizar campos de capitalização e simplificar lógica de eventos

--- a/index.html
+++ b/index.html
@@ -120,18 +120,6 @@
         </div>
         <!-- Campos para capitalização -->
         <div class="status-item capitalizacao-field">
-          <span class="label">i<sub>k</sub> (%):</span>
-          <div class="value-container">
-            <span class="value" id="ikValue">-</span>
-            <button class="clear-value-btn" id="clearIk" style="display: none;" title="Remover valor iₖ">x</button>
-          </div>
-          <select class="rate-selector" id="ikPeriodSelector" style="display: inline-block;">
-            <option value="day">Dia</option>
-            <option value="month" selected>Mês</option>
-            <option value="year">Ano</option>
-          </select>
-        </div>
-        <div class="status-item capitalizacao-field">
           <span class="label">i<sub>e</sub> (%):</span>
           <div class="value-container">
             <span class="value" id="ieValue">-</span>
@@ -149,6 +137,18 @@
             <span class="value" id="kValue">-</span>
             <button class="clear-value-btn" id="clearK" style="display: none;" title="Remover valor k">x</button>
           </div>
+        </div>
+        <div class="status-item capitalizacao-field">
+          <span class="label">i<sub>k</sub> (%):</span>
+          <div class="value-container">
+            <span class="value" id="ikValue">-</span>
+            <button class="clear-value-btn" id="clearIk" style="display: none;" title="Remover valor iₖ">x</button>
+          </div>
+          <select class="rate-selector" id="ikPeriodSelector" style="display: none;">
+            <option value="day">Dia</option>
+            <option value="month" selected>Mês</option>
+            <option value="year">Ano</option>
+          </select>
         </div>
         <!-- Campos para taxas equivalentes -->
         <div class="status-item equivalentes-field">
