--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora Financeira</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/taxa-calculator.css">
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
