feat: adicionar rodapé com informações dos criadores e link para o repositório

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Calculadora Financeira</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -252,6 +253,31 @@
       </div>
     </div>
   </div>
+
+  <!-- Rodapé com informações dos criadores -->
+  <footer class="footer">
+    <div class="footer-content">
+      <p class="footer-title">Calculadora Financeira</p>
+      <div class="creators">
+        <span class="creators-label">Criadores:</span>
+        <div class="creators-links">
+          <a href="https://github.com/Guiscoob7" target="_blank" rel="noopener noreferrer" class="creator-link">
+            Guilherme Epifânio
+          </a>
+          <span class="separator">&</span>
+          <a href="https://github.com/Victor-Gabriel-Barbosa" target="_blank" rel="noopener noreferrer" class="creator-link">
+            Victor Gabriel
+          </a>
+        </div>
+      </div>
+      <div class="repository-link">
+        <a href="https://github.com/Victor-Gabriel-Barbosa/CalculadoraFinanceira" target="_blank" rel="noopener noreferrer" class="repo-link">
+          <span class="repo-icon">📁</span>
+          Repositório GitHub
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script type="module" src="js/script.js"></script>
 </body>
