Adiciona calculadora para VPL e amortização

--- a/index.html
+++ b/index.html
@@ -258,6 +258,20 @@
   <footer class="footer">
     <div class="footer-content">
       <p class="footer-title">Calculadora Financeira</p>
+      
+      <!-- Ferramentas Adicionais -->
+      <div class="additional-tools-footer">
+        <span class="tools-label">Ferramentas:</span>
+        <div class="tools-links">
+          <a href="amortizacao.html" class="tool-footer-link">
+            Calculadora de Amortização SAC
+          </a>
+          <a href="vpl.html" class="tool-footer-link">
+            Calculadora de Valor Presente Líquido (VPL)
+          </a>
+        </div>
+      </div>
+      
       <div class="creators">
         <span class="creators-label">Criadores:</span>
         <div class="creators-links">
