feat: adicionar rodapé com informações dos criadores e links para ferramentas adicionais

--- a/vpl.html
+++ b/vpl.html
@@ -84,13 +84,46 @@
         </div>
       </div>
     </div>
-
-    <!-- Links de Navegação -->
-    <div class="navigation-links">
-      <a href="index.html" class="nav-link">Calculadora Principal</a>
-      <a href="amortizacao.html" class="nav-link">Amortização</a>
-    </div>
   </div>
+
+  <!-- Rodapé com informações dos criadores -->
+  <footer class="footer">
+    <div class="footer-content">
+      <p class="footer-title">Calculadora Financeira</p>
+      
+      <!-- Ferramentas Adicionais -->
+      <div class="additional-tools-footer">
+        <span class="tools-label">Ferramentas:</span>
+        <div class="tools-links">
+          <a href="amortizacao.html" class="tool-footer-link">
+            Calculadora de Amortização SAC
+          </a>
+          <a href="vpl.html" class="tool-footer-link">
+            Calculadora de Valor Presente Líquido (VPL)
+          </a>
+        </div>
+      </div>
+      
+      <div class="creators">
+        <span class="creators-label">Criadores:</span>
+        <div class="creators-links">
+          <a href="https://github.com/Guiscoob7" target="_blank" rel="noopener noreferrer" class="creator-link">
+            Guilherme Epifânio
+          </a>
+          <span class="separator">&</span>
+          <a href="https://github.com/Victor-Gabriel-Barbosa" target="_blank" rel="noopener noreferrer" class="creator-link">
+            Victor Gabriel
+          </a>
+        </div>
+      </div>
+      <div class="repository-link">
+        <a href="https://github.com/Victor-Gabriel-Barbosa/CalculadoraFinanceira" target="_blank" rel="noopener noreferrer" class="repo-link">
+          <span class="repo-icon">📁</span>
+          Repositório GitHub
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/calculos-vpl.js"></script>
 </body>
